# visual-odometry-rs

./: .gitignore  Cargo.toml  README.md
benches/: accumulator.rs  mean_pyramid.rs  png_read.rs
data/: camera.json
examples/: 01-camera.rs  02-depth_map_candidates.rs  03-multires_depth_strategies.rs  04-optim_exp.rs  04-optim_exp_bis.rs  05-optim_rosenbrock.rs  06-affine_2d.rs  06-optim_affine_2d.rs  06-optim_affine_2d_multires.rs  06-optim_affine_2d_multires_bis.rs  07-optim_camera_tracking.rs  README.md  camera.rs  candidates_coarse-to-fine.rs  candidates_dso.rs  conrod_counter.rs  conrod_hello_world.rs  conrod_list_select.rs  cvrs_track.rs  dataset_tum-read-associations.rs  dataset_tum-read-trajectory.rs  depth_map.rs  depth_map_candidates.rs  depth_map_strategies.rs  display_image.rs  display_image_program.rs  gauss_newton_1d.rs  gauss_newton_1d_bis.rs  gauss_newton_2d.rs  gradient.rs  gradient_pyramid.rs  half_resolution.rs  hierarchical_image.rs  icip-02-tracking_dso.rs  icip-03-track_full_sequence.rs  icip-03-track_full_sequence_dso.rs  icip-candidates-sequence.rs  icip-candidates-sequence_dso.rs  json.rs  matrix_hierarchy.rs  (+11 more)
examples/candidates/: mod.rs
examples/helper/: mod.rs
examples/interop/: mod.rs
examples/inverse_depth/: mod.rs
examples/multires/: mod.rs
examples/program/: mod.rs
examples/support/: mod.rs
src/: eval.rs  gradient.rs  helper.rs  icl_nuim.rs  inverse_depth.rs  json.rs  lib.rs  main.rs  multires.rs  optimization.rs  optimization_bis.rs  read_image.rs  se3.rs  so3.rs  track.rs  tum_rgbd.rs  view.rs
src/camera/: mod.rs
src/candidates/: mod.rs
src/colormap/: mod.rs
src/core/: camera.rs  gradient.rs  inverse_depth.rs  mod.rs  multires.rs  track.rs
src/core/candidates/: coarse_to_fine.rs  dso.rs  mod.rs
src/core/track/: inverse_compositional.rs  inverse_compositional_accum.rs  inverse_compositional_huber.rs  inverse_compositional_norm.rs  inverse_compositional_photo.rs  inverse_compositional_robust.rs  lm_optimizer.rs  lm_optimizer_accum.rs  lm_optimizer_huber.rs  lm_optimizer_norm.rs  lm_optimizer_photo.rs  lm_optimizer_robust.rs  mod.rs
src/dataset/: mod.rs  tum_rgbd.rs
src/dso/: candidates.rs  mod.rs
src/helper/: mod.rs
src/icl_nuim/: mod.rs
src/interop/: mod.rs
src/inverse_depth/: mod.rs
src/math/: accumulator.rs  mod.rs  optimizer.rs  se3.rs  so3.rs
src/misc/: colormap.rs  eval.rs  helper.rs  interop.rs  mod.rs  type_aliases.rs  view.rs
src/multires/: mod.rs
src/multires_float/: mod.rs
src/optimization/: mod.rs
src/se3/: mod.rs
src/so3/: mod.rs
src/view/: mod.rs
