[package]
name = "visual-odometry-rs"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"


[dependencies]
image = "0.19" # Encoding/decoding images in Rust.
png = "0.12"
byteorder = "1.2" # Reading numbers in [big/little]-endian.
nalgebra = "0.17" # Linear algebra.
rand = "0.6" # Random number generators.
num-traits = "0.2" # Useful numeric traits.
nom = "4.2" # Parsing files.
itertools = "0.7" # More iterators.


[dev-dependencies]
quickcheck = "0.8" # Property based testing.
approx = "0.3" # Approximate equalities.
csv = "1" # CSV.
criterion = "0.2" # Benchmarks.


[[bench]]
name = "png_read"
harness = false
