[package]
name = "visual-odometry-rs"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

description = "Visual odometry in Rust (vors)"
homepage = "https://github.com/mpizenberg/visual-odometry-rs"
repository = "https://github.com/mpizenberg/visual-odometry-rs"
readme = "README.md"
keywords = ["odometry", "slam", "vision", "rgbd"] # up to 5 keywords
categories = ["science::robotics", "multimedia::video"] # up to 5 categories, cf crates.io/category_slugs
license = "MPL-2.0" # SPDX license


[dependencies]
image = "0.19" # Encoding/decoding images in Rust.
png = "0.12"
byteorder = "1.2" # Reading numbers in [big/little]-endian.
nalgebra = "0.17" # Linear algebra.
rand = "0.6" # Random number generators.
num-traits = "0.2" # Useful numeric traits.
nom = "4.2" # Parsing files.
itertools = "0.7" # More iterators.


[dev-dependencies]
quickcheck = "0.8" # Property based testing.
quickcheck_macros = "0.8"
approx = "0.3" # Approximate equalities.
csv = "1" # CSV.
criterion = "0.2" # Benchmarks.


[[bench]]
name = "mean_pyramid"
harness = false
